# privacy-and-grokking

./: .gitignore  Makefile  README.md  justfile  pyproject.toml
notebooks/: config.py  evaluate_training.ipynb  grokking_playground.ipynb  membership_inference_threshold.ipynb  mia_merlin_morgan.ipynb  mia_rmia.ipynb  mia_threshold.ipynb  minva_deep_leakage_from_gradients.ipynb  minva_search.ipynb  rdm.ipynb  simple_mia.ipynb
src/privacy_and_grokking/: cli.py
src/privacy_and_grokking/attacks/: __init__.py  mia_rmia.py  mia_threshold.py
src/privacy_and_grokking/config/: __init__.py  entries.py  model.py  registry.py
src/privacy_and_grokking/datasets/: __init__.py  canaries.py  datasets.py  wrapper.py
src/privacy_and_grokking/logger/: __init__.py  formatter.py  registry.py
src/privacy_and_grokking/models/: __init__.py  cnn.py  mlp.py  wrapper.py
src/privacy_and_grokking/path_keeper/: __init__.py  keeper.py
src/privacy_and_grokking/training/: __init__.py  metrics.py  parameters.py  registry.py  train.py
src/privacy_and_grokking/utils/: __init__.py
src/privacy_and_grokking/visualize/: __init__.py  data.py  evaluate.py  training.py
tests/integration/: test_dataset.py
