[project]
name = "privacy-and-grokking"
version = "0.1.0"
description = "Understanding how Grokking affects privacy."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel==7.0.1",
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "onnx==1.19.1",
    "onnxscript==0.5.6",
    "polars==1.35.1",
    "pydantic==2.12.4",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "tqdm==4.67.1",
    "typer==0.20.0",
]

[project.scripts]
pag = "privacy_and_grokking.cli:app"
